# Slay-the-Spire-data

./: README.md  pyproject.toml
analyze/: analyze.py  run.py
results/bad-silent/: README.md  boss_relics.csv  card_picks.csv  card_removed.csv  card_wins.csv  damage_taken.csv  floor.csv  general.json  gold.csv  killed_by.csv  relic_wins.csv
results/panacea-ironclad-sample/: README.md  boss_relics.csv  card_picks.csv  card_removed.csv  card_wins.csv  damage_taken.csv  floor.csv  general.json  gold.csv  killed_by.csv  relic_wins.csv
results/robit/: README.md  boss_relics.csv  card_picks.csv  card_removed.csv  card_wins.csv  damage_taken.csv  floor.csv  general.json  gold.csv  killed_by.csv  relic_wins.csv
runs/panacea-ironclad-sample/: 1663019150.run  1663026387.run  1663181737.run  1663185665.run  1663349169.run  1663358933.run  1663432501.run  1663439941.run  1663442533.run  1663655552.run  1663664431.run  1663667485.run  1663671030.run  1663717542.run  1663723770.run  1663972477.run  1663982308.run  1664567436.run  1664576350.run  1665761187.run  1665771036.run  1665776136.run  1665946466.run  1665953909.run  1665958755.run  1666060109.run  1666061338.run  1666068094.run  1666133133.run  1666139781.run  1666315363.run  1666557531.run  1666565086.run  1666598636.run  1666602349.run  1666774509.run  1667071560.run  1667076944.run  1667161552.run  1667337444.run  (+11 more)
runs/robit/: 1678849387.run  1679185077.run  1679353650.run  1679364398.run  1679434560.run  1679531655.run  1679615602.run  1679699216.run  1679782434.run  1679788027.run  1679965760.run  1680128793.run  (+38 more)
(+622 files in other folders)
