[tool.poetry]
name = "slay-the-spire-data"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "Apache2.0"
readme = "README.md"
packages = [{include = "slay_the_spire_data"}]

[tool.poetry.dependencies]
python = "^3.10"
plotly = "^5.11.0"
pandas = "^1.5.2"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
