[tool.poetry]
name = "slay-the-spire-data"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "Apache2.0"
readme = "README.md"
packages = [{include = "slay_the_spire_data"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.2"
seaborn = {extras = ["stats"], version = "^0.12.1"}
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
